--- a/supp_tables/ichthyosaur_occurrences_stratigraphy.tex
+++ b/supp_tables/ichthyosaur_occurrences_stratigraphy.tex
@@ -4,7 +4,7 @@
 \begin{longtabu}{>{\itshape}lXXSSl}
 	\caption[Occurrence stratigraphy and dates of Ichthyosauriformes included in the analyses]{{\normalsize\textbf{Occurrence stratigraphy and dates of Ichthyosauriformes included in the analyses.} Stratographical occurrences are given to the nearest ammonite or conodont biozone horizon where possible. Occurrences are converted to absolute ages using \textcite{Gradstein2012}. FAD, first appearance date; LAD, last appearance date.\label{tbl:ingroup-dates}}}\\                                                      
 	\toprule\emph{Taxon}                                 & {FAD stratigraphy}                                                                                                                 & {LAD stratigraphy}                                                                                                                 & {FAD (\si{\mega\annum})} & {LAD (\si{\mega\annum})} & {References} \\\midrule\endfirsthead     
-	\caption*{Table~\thetable{} continued}\\
+	\caption*{Supplementary table~\thetable{} continued}\\
 	\toprule\emph{Taxon}                                 & {FAD stratigraphy}                                                                                                                 & {LAD stratigraphy}                                                                                                                 & {FAD (\si{\mega\annum})} & {LAD (\si{\mega\annum})} & {References} \\\midrule\endhead          
 	\bottomrule\endfoot
 	\bottomrule\endlastfoot
@@ -864,7 +864,7 @@ columbianus} ammonite Biozone, middle Norian, Upper Triassic & 216.9
         Tithonian, Upper Jurassic                                      & 147.9
                                                                        & 146.9
                                                                        &
-                                                                       \cite{Efimov1999PZa} \\                    
+                                                                       \cite{Efimov1999PZd} \\                    
 	Undorosaurus trautscholdi                            &
         \emph{Epivirgatites nikitini} Ammonite Biozone, Tithonian, Upper
         Jurassic                                                          &
