--- a/supplement-ichthyosaur_macroevolution_biber.bib
+++ b/supplement-ichthyosaur_macroevolution_biber.bib
@@ -36,7 +36,7 @@
   NOTE = {ZSCC: NoCitationData[s1]},
   NUMBER = {2},
   PAGES = {129--155},
-  SHORTJOURNAL = {J Syst Palaeontol},
+  SHORTJOURNAL = {J. Syst. Palaeontol.},
   TITLE = {A New Phylogeny of Ichthyosaurs ({{Reptilia}}: {{Diapsida}})},
   VOLUME = {17},
 }
@@ -231,12 +231,13 @@
 
 @ARTICLE{Ketchum2004CJES,
   AUTHOR = {Ketchum, Hilary F. and Barrett, Paul M.},
+  DATE = {2004-01-24},
   DOI = {10.1139/E03-084},
   JOURNALTITLE = {Canadian Journal of Earth Sciences},
   KEYWORDS = {\#nosource},
   PAGES = {1--8},
   SHORTJOURNAL = {Can. J. Earth Sci.},
-  TITLE = {New Reptile Material from the {{Lower}} {{Triassic}} of {{Madagascar}}: Implications for the {{Permian}}–{{Triassic}} Extinction Event},
+  TITLE = {New Reptile Material from the {{Lower Triassic}} of {{Madagascar}}: Implications for the {{Permian}}–{{Triassic}} Extinction Event},
   VOLUME = {41},
 }
 
@@ -257,6 +258,7 @@
 
 @ARTICLE{Ruta2011P,
   AUTHOR = {Ruta, Marcello and Cisneros, Juan C and Liebrecht, Torsten and Tsuji, Linda A and Müller, Johannes},
+  DATE = {2011-04},
   DOI = {10.1111/j.1475-4983.2011.01051.x},
   FILE = {/Users/glbcm/Zotero/storage/PHIACJJD/E5FB6180-07EE-42E5-A344-49033D233499.pdf},
   JOURNALTITLE = {Palaeontology},
@@ -283,6 +285,7 @@
   ABSTRACT = {Background Ichthyosauria is a diverse clade of marine amniotes that spanned most of the Mesozoic. Until recently, most authors interpreted the fossil record as showing that three major extinction events affected this group during its history: one during the latest Triassic, one at the Jurassic–Cretaceous boundary (JCB), and one (resulting in total extinction) at the Cenomanian-Turonian boundary. The JCB was believed to eradicate most of the peculiar morphotypes found in the Late Jurassic, in favor of apparently less specialized forms in the Cretaceous. However, the record of ichthyosaurs from the Berriasian–Barremian interval is extremely limited, and the effects of the end-Jurassic extinction event on ichthyosaurs remains poorly understood. Methodology/Principal Findings Based on new material from the Hauterivian of England and Germany and on abundant material from the Cambridge Greensand Formation, we name a new ophthalmosaurid, Acamptonectes densus gen. et sp. nov. This taxon shares numerous features with Ophthalmosaurus, a genus now restricted to the Callovian–Berriasian interval. Our phylogenetic analysis indicates that Ophthalmosauridae diverged early in its history into two markedly distinct clades, Ophthalmosaurinae and Platypterygiinae, both of which cross the JCB and persist to the late Albian at least. To evaluate the effect of the JCB extinction event on ichthyosaurs, we calculated cladogenesis, extinction, and survival rates for each stage of the Oxfordian–Barremian interval, under different scenarios. The extinction rate during the JCB never surpasses the background extinction rate for the Oxfordian–Barremian interval and the JCB records one of the highest survival rates of the interval. Conclusions/Significance There is currently no evidence that ichthyosaurs were affected by the JCB extinction event, in contrast to many other marine groups. Ophthalmosaurid ichthyosaurs remained diverse from their rapid radiation in the Middle Jurassic to their total extinction at the beginning of the Late Cretaceous.},
   AUTHOR = {Fischer, Valentin and Maisch, Michael W and Naish, Darren and Kosma, Ralf and Liston, Jeff J and Joger, Ulrich and Krüger, Fritz J and Pérez, Judith Pardo and Tainsh, Jessica and Appleby, Robert M},
   PUBLISHER = {Public Library of Science},
+  DATE = {2012-01},
   DOI = {10.1371/journal.pone.0029234},
   FILE = {/Users/glbcm/Zotero/storage/QVQC9YSF/F3860F8C-E425-47CC-9801-26121C079603.pdf},
   JOURNALTITLE = {PLoS ONE},
@@ -310,6 +313,7 @@
 @ARTICLE{Maxwell2010JVP,
   ABSTRACT = {... DOI: http://dx.doi.org/ 10.1080 / 02724631003617944 . Published online: 24 March 2010. ... DOI: http://dx.doi.org/ 10.1080 / 02724631003617944 . Published online: 24 March 2010. FIGURE 2 Cranial elements of Arthropterygius chrisorum CMN 40608. ...},
   AUTHOR = {Maxwell, Erin E},
+  DATE = {2010-04-24},
   DOI = {10.1080/02724631003617944},
   FILE = {/Users/glbcm/Zotero/storage/ZRIARUSU/1BFC884F-90E9-4559-83FE-770BFF9F9596.pdf},
   JOURNALTITLE = {Journal of Vertebrate Paleontology},
@@ -355,7 +359,7 @@
   DATE = {1996},
   FILE = {/Users/glbcm/Zotero/storage/864I362B/Dal_Sasso_Pinna_1996_Paleontologia_Lombarda_iBesanosaurus_leptorhynchus-i_n.pdf},
   JOURNALTITLE = {Paleontologia Lombarda},
-  KEYWORDS = {Besanosaurus,Triassic},
+  KEYWORDS = {Triassic,Besanosaurus},
   NOTE = {ZSCC: NoCitationData[s0]},
   NUMBER = {1},
   PAGES = {3--23},
@@ -383,7 +387,7 @@
   DATE = {1998-11-03},
   FILE = {/Users/glbcm/Zotero/storage/NC9MW93M/4B5CFC8E-99A9-4476-8E47-A0E662BC2771.pdf},
   JOURNALTITLE = {Paleontologicheskii Zhurnal},
-  KEYWORDS = {\#nosource,Brachypterygius,Grendelius,Jurassic},
+  KEYWORDS = {Jurassic,Brachypterygius,Grendelius,\#nosource},
   PAGES = {82--86},
   SHORTJOURNAL = {Palaeontol Zhurn},
   TITLE = {The Ichthyosaur {{{\emph{Otschevia pseudoscythica}} gen. et sp. nov.}} from the {{Upper Jurassic}} of {{Ulyanovsk Volga}}},
@@ -416,6 +420,7 @@
 
 @ARTICLE{McGowan1994JVPa,
   AUTHOR = {McGowan, Christopher},
+  DATE = {1994-06},
   DOI = {10.1080/02724634.1994.10011550},
   FILE = {/Users/glbcm/Zotero/storage/6MC5DWEH/543DD086-910C-460E-A7F0-B052F2FD1DA0.pdf},
   JOURNALTITLE = {Journal of Vertebrate Paleontology},
@@ -485,6 +490,7 @@
 
 @ARTICLE{Motani2015JVP,
   AUTHOR = {Motani, Ryosuke and Jiang, Dayong and Tintori, Andrea and Rieppel, Olivier C and Chen, Guanbao and You, Hailu},
+  DATE = {2015-02},
   DOI = {10.1080/02724634.2014.892011},
   FILE = {/Users/glbcm/Zotero/storage/XNGDNSEL/76E85DBD-D5BE-47FC-9397-8DC11B2A013D.pdf},
   JOURNALTITLE = {Journal of Vertebrate Paleontology},
@@ -527,6 +533,7 @@
 
 @ARTICLE{Tyborowski2016APP,
   AUTHOR = {Tyborowski, Daniel},
+  DATE = {2016},
   DOI = {10.4202/app.00252.2016},
   FILE = {/Users/glbcm/Zotero/storage/3BS8AZJ9/9B7F0C83-056D-45BE-86FE-4283864802B0.pdf},
   JOURNALTITLE = {Acta Palaeontologica Polonica},
@@ -555,7 +562,7 @@
   DOI = {10.1080/02724634.1989.10011750},
   FILE = {/Users/glbcm/Zotero/storage/462CXZ6L/3D53610B-892A-4364-BF5D-6023001F4B14.pdf},
   JOURNALTITLE = {Journal of Vertebrate Paleontology},
-  KEYWORDS = {\#nosource,Cymbospondylus},
+  KEYWORDS = {Cymbospondylus,\#nosource},
   LANGID = {english},
   NUMBER = {2},
   PAGES = {163--173},
@@ -635,6 +642,7 @@
 
 @ARTICLE{Paparella2016GM,
   AUTHOR = {Paparella, Ilaria and Maxwell, Erin E and Cipriani, Angelo and Roncacè, Scilla and Caldwell, Michael W},
+  DATE = {2016-07-11},
   DOI = {10.1017/S0016756816000455},
   FILE = {/Users/glbcm/Zotero/storage/92J9LZ23/Paparella_et_al_2016_The_first_ophthalmosaurid_ichthyosaur_from_the_Upper_Jurassic_of_the_Umbrian–Marchean_Apennines.pdf},
   JOURNALTITLE = {Geological Magazine},
@@ -702,6 +710,7 @@
 @ARTICLE{Chen2007GC,
   ABSTRACT = {Image},
   AUTHOR = {Chen, Xiaohong and Cheng, Long and Sander, P Martin},
+  DATE = {2007},
   FILE = {/Users/glbcm/Zotero/storage/TTSIIZCD/85B18CA4-D7B0-4ADF-9394-3767FF31554E.pdf},
   JOURNALTITLE = {Geology in China},
   KEYWORDS = {Shastasaurus,Callawayia},
@@ -713,6 +722,7 @@
 
 @ARTICLE{Brinkman1992P,
   AUTHOR = {Brinkman, Donald B and Xijin, Zhao and Nicholls, Elizabeth L},
+  DATE = {1992},
   FILE = {/Users/glbcm/Zotero/storage/TK8JE8VF/695BEC41-75E9-4797-85D9-DEEE8B6C1A3B.pdf},
   JOURNALTITLE = {Palaeontology},
   NUMBER = {2},
@@ -779,9 +789,10 @@
 
 @ARTICLE{Motani1999P,
   AUTHOR = {Motani, Ryosuke and Manabe, Makoto and Dong, Zhiming M},
+  DATE = {1999-06},
   FILE = {/Users/glbcm/Zotero/storage/G5A485ED/4A572B99-B567-4588-82B6-8DDF191C00CC.pdf},
   JOURNALTITLE = {Paludicola},
-  KEYWORDS = {\#nosource,Himalayasaurus,Triassic},
+  KEYWORDS = {Triassic,Himalayasaurus,\#nosource},
   NUMBER = {2},
   PAGES = {174--181},
   SHORTJOURNAL = {Paludicola},
@@ -806,6 +817,7 @@
 
 @ARTICLE{Carroll1991PTRSBBS,
   AUTHOR = {Carroll, Robert L and Zhi-Ming, D},
+  DATE = {1991-02},
   DOI = {10.1098/rstb.1991.0004},
   FILE = {/Users/glbcm/Zotero/storage/DGKKZCDX/Carroll_Zhi-Ming_1991_Phil._Trans._R._Soc._B_iHupehsuchus-i,_an_enigmatic_aquatic_reptile_from_the_Triassic_of_China,.pdf},
   JOURNALTITLE = {Philosophical Transactions of the Royal Society B: Biological Sciences},
@@ -849,6 +861,7 @@
   AUTHOR = {McGowan, Christopher},
   LOCATION = {Toronto :},
   PUBLISHER = {Royal Ontario Museum,},
+  DATE = {1974-12},
   DOI = {10.5962/bhl.title.52056},
   FILE = {/Users/glbcm/Zotero/storage/9KEYRBNE/19F35209-0AF5-4A7D-8CE6-9D324A1CA3D0.pdf},
   ISBN = {0888541651},
@@ -861,6 +874,7 @@
 
 @ARTICLE{Lomax2017PP,
   AUTHOR = {Lomax, Dean R and Massare, Judy A},
+  DATE = {2017-02},
   DOI = {10.1002/spp2.1065},
   FILE = {/Users/glbcm/Zotero/storage/6NW6GBPF/Lomax_Massare_2017_Two_new_species_of_iIchthyosaurus-i_from_the_lowermost_Jurassic_(Hettangian)_of_Somerset,.pdf},
   JOURNALTITLE = {Papers in Palaeontology},
@@ -906,6 +920,7 @@
   ABSTRACT = {In spite of a fossil record spanning over 150 million years, pelvic girdle evolution in Ichthyopterygia is poorly known. Here, we examine pelvic girdle size relationships using quantitative methods and new ophthalmosaurid material from the Slottsmøya Member Lagerstätte of Svalbard, Norway. One of these new specimens, which preserves the most complete ichthyosaur pelvic girdle from the Cretaceous, is described herein as a new taxon, Keilhauia nui gen. et sp. nov. It represents the most complete Berriasian ichthyosaur known and the youngest yet described from the Slottsmøya Member. It is diagnosed on the basis of two autapomorphies from the pelvic girdle, including an ilium that is anteroposteriorly expanded at its dorsal end and an ischiopubis that is shorter or subequal in length to the femur, as well as a unique character combination. The Slottsmøya Member Lagerstätte ichthyosaurs are significant in that they represent a diverse assemblage of ophthalmosaurids that existed immediately preceding and across the Jurassic–Cretaceous boundary. They also exhibit considerable variation in pelvic girdle morphology, and expand the known range in size variation of pelvic girdle elements in the clade.},
   AUTHOR = {Delsett, Lene Liebe and Roberts, Aubrey Jane and Druckenmiller, Patrick S and Hurum, Jørn Harald},
   PUBLISHER = {Public Library of Science},
+  DATE = {2017-01},
   DOI = {10.1371/journal.pone.0169971},
   FILE = {/Users/glbcm/Zotero/storage/7BDPBR8S/Delsett_et_al_2017_A_New_Ophthalmosaurid_(Ichthyosauria)_from_Svalbard,_Norway,_and_Evolution_of_the_Ichthyopterygian.pdf},
   JOURNALTITLE = {PLoS ONE},
@@ -937,6 +952,7 @@
   ABSTRACT = {The first ichthyosaur to be recorded from the Pliensbachian Stage of the English Lower Liassic is described as Leptonectes moorei sp. nov., extending the geological range of Leptonectes to the Pliensbachian....},
   AUTHOR = {McGowan, Christopher and Milner, Angela C},
   PUBLISHER = {Blackwell Publishers Ltd},
+  DATE = {1999-10},
   DOI = {10.1111/1475-4983.00096},
   FILE = {/Users/glbcm/Zotero/storage/HDVZ99F4/ECF05F38-5831-43CF-8C92-2A8098379194.pdf},
   JOURNALTITLE = {Palaeontology},
@@ -1021,8 +1037,23 @@
   VOLUME = {9},
 }
 
+@ARTICLE{Maisch1997PZ,
+  AUTHOR = {Maisch, Michael W and Matzke, Andreas T},
+  DATE = {1997-10},
+  DOI = {10.1007/BF02988496},
+  FILE = {/Users/glbcm/Zotero/storage/9JUMJB6W/342B3F53-FF02-4D09-91D6-9D98F972D2EE.pdf},
+  JOURNALTITLE = {Paläontologische Zeitschrift},
+  KEYWORDS = {Triassic,Mikadocephalus,\#nosource},
+  NUMBER = {3/4},
+  PAGES = {267--289},
+  SHORTJOURNAL = {Paläontol Z},
+  TITLE = {{{{\emph{Mikadocephalus gracilirostris}} n. gen., n. sp.,}} a New Ichthyosaur from the {{Grenzbitumenzone}} ({{Anisian}}–{{Ladinian}}) of {{Monte San Giorgio}} ({{Switzerland}})},
+  VOLUME = {71},
+}
+
 @ARTICLE{Repossi1902ASISNMCSNM,
   AUTHOR = {Repossi, Emilio},
+  DATE = {1902},
   FILE = {/Users/glbcm/Zotero/storage/STLF6WJW/539CC448-3E05-4481-B37D-A0DEA80722A0.pdf},
   JOURNALTITLE = {Atti della Società Italiana di Scienza Naturali e del Museo Civico di Storia Naturale di Milano},
   KEYWORDS = {\#nosource},
@@ -1037,9 +1068,10 @@
   AUTHOR = {Brinkmann, Winand},
   PUBLISHER = {[object Object]},
   URL = {http://scholar.google.com/scholar?q=related:Ir4lap8L3VAJ:scholar.google.com/&hl=en&num=20&as_sdt=0,5},
+  DATE = {1998-01},
   FILE = {/Users/glbcm/Zotero/storage/Q7RPA63E/Brinkmann_1998_Neues_Jahrbuch_fur_Geologie_und_Palaontologie_–_Abhandlungen_iSangiorgiosaurus-i_n.pdf},
   JOURNALTITLE = {Neues Jahrbuch für Geologie und Paläontologie, Abhandlungen},
-  KEYWORDS = {\#nosource,ichthyosaurs,Mixosaurus,Switzerland,Triassic},
+  KEYWORDS = {Mixosaurus,Triassic,ichthyosaurs,Switzerland,\#nosource},
   LANGID = {german},
   NUMBER = {1},
   PAGES = {125--144},
@@ -1050,6 +1082,7 @@
 
 @ARTICLE{Chen2010APS,
   AUTHOR = {Chen, Xiaohong and Cheng, Long},
+  DATE = {2010-06},
   FILE = {/Users/glbcm/Zotero/storage/MKVFQUVW/A1E0CDE3-98A6-490D-9E16-310BF3C16566.pdf},
   JOURNALTITLE = {Acta Palaeontologica Sinica},
   KEYWORDS = {Mixosaurus,\#nosource},
@@ -1064,6 +1097,7 @@
   ABSTRACT = {¡div class="title"¿Ophthalmosaurian (Ichthyosauria) records from the Aalenian–Bajocian of Patagonia (Argentina): an overview¡/div¿ - Volume 151 Issue 1 - MARTA S. FERNΆNDEZ, MARIANELLA TALEVI},
   AUTHOR = {Fernández, Marta S and Talevi, Marianella},
   PUBLISHER = {Cambridge University Press},
+  DATE = {2014-01},
   DOI = {10.1017/S0016756813000058},
   FILE = {/Users/glbcm/Zotero/storage/C8GQGUIW/68301FF7-ABFE-433E-A8A5-A501AE1225D6.pdf},
   JOURNALTITLE = {Geological Magazine},
@@ -1096,6 +1130,7 @@
 @ARTICLE{Maxwell2016PP,
   ABSTRACT = {Cretaceous ichthyosaurs were relatively diverse in temperate latitudes, but few species have been described from the palaeotropics. Here, we describe a new ophthalmosaurid ichthyosaur, Muiscasaurus catheti...},
   AUTHOR = {Maxwell, Erin E and Dick, Daniel G and Padilla, Santiago and Parra, Mary Luz},
+  DATE = {2016-02},
   DOI = {10.1002/spp2.1030},
   FILE = {/Users/glbcm/Zotero/storage/Z7YTPZZM/Maxwell_etal_2016_Papers_in_Palaeontology_A_new_ophthalmosaurid_ichthyosaur_from_the_Early_Cretaceous_of_Colombia.pdf},
   JOURNALTITLE = {Papers in Palaeontology},
@@ -1142,7 +1177,7 @@
   DATE = {1999},
   FILE = {/Users/glbcm/Zotero/storage/M5WVNB99/A3B0143B-6D4E-4634-90F3-3EF8D553C353.pdf},
   JOURNALTITLE = {Paleontologicheskii Zhurnal},
-  KEYWORDS = {Jurassic,Ophthalmosaurus,Yasykovia,\#nosource},
+  KEYWORDS = {\#nosource,Jurassic,Ophthalmosaurus,Yasykovia},
   PAGES = {91--98},
   SHORTJOURNAL = {Paleontol. Zhurnal},
   TITLE = {Ichthyosaurs of a New Genus {{{\emph{Yasykovia}}}} from the {{Upper Jurassic}} Strata of {{European Russia}}},
@@ -1170,8 +1205,9 @@
   URL = {http://scholar.google.com/scholar?q=related:nE1862PPxCsJ:scholar.google.com/&hl=en&num=20&as_sdt=0,5},
   BOOKTITLE = {Vertebrate {{Fossils}} and the {{Evolution}} of {{Scientific Concepts}}},
   CHAPTER = {[object Object]},
+  DATE = {1995},
   FILE = {/Users/glbcm/Zotero/storage/NCCYY7PH/94951202-7AC3-47F8-A3D2-B976A6F440CE.pdf},
-  KEYWORDS = {\#nosource,Canada,ichthyosaurs,Parvinatator,taxonomy,Triassic},
+  KEYWORDS = {Triassic,Parvinatator,taxonomy,ichthyosaurs,Canada,\#nosource},
   PAGES = {521--535},
   TITLE = {A New Ichthyosaur from the {{Triassic Sulphur Mountain}} Formation of {{British Columbia}}},
 }
@@ -1193,7 +1229,7 @@
   DOI = {10.7717/peerj.2604},
   FILE = {/Users/glbcm/Zotero/storage/C3VEXAQA/Fischer_2016_Taxonomy_of_iPlatypterygius_campylodon-i_and_the_diversity_of_the_last_ichthyosaurs.pdf},
   JOURNALTITLE = {PeerJ},
-  KEYWORDS = {Cretaceous,ichthyosaurs,Pervushovisaurus,Platypterygius,taxonomy},
+  KEYWORDS = {Cretaceous,Platypterygius,Pervushovisaurus,taxonomy,ichthyosaurs},
   LANGID = {english},
   PAGES = {e2604--21},
   TITLE = {Taxonomy of {{{\emph{Platypterygius campylodon}}}} and the Diversity of the Last Ichthyosaurs},
@@ -1227,14 +1263,27 @@
 
 @ARTICLE{Maisch2005NJGPM,
   AUTHOR = {Maisch, Michael W and Matzke, Andreas T},
+  DATE = {2005-10},
   FILE = {/Users/glbcm/Zotero/storage/YTS79LKN/CFDAC691-8968-415E-A534-0E55AFCE6763.pdf},
   JOURNALTITLE = {Neues Jahrbuch für Geologie und Paläontologie, Monatshefte},
-  KEYWORDS = {\#nosource,Phalarodon},
+  KEYWORDS = {Phalarodon,\#nosource},
   NUMBER = {10},
   PAGES = {596--613},
   SHORTJOURNAL = {N Jahrb Geol Paläontol Monats},
   TITLE = {Observations on {{Triassic}} Ichthyosaurs. {{Part XIV}}: The {{Middle Triassic}} Mixosaurid {{{\emph{Phalarodon}}}}{\emph{ Major }}(v. {{Huene}}, 1916) from {{Switzerland}} and a Reconsideration of Mixosaurid Phylogeny},
   VOLUME = {2005},
+}
+
+@INCOLLECTION{Sander1997AMR,
+  AUTHOR = {Sander, P Martin},
+  LOCATION = {San Diego},
+  PUBLISHER = {Academic Press},
+  BOOKTITLE = {Ancient {{Marine Reptiles}}},
+  DATE = {1997},
+  FILE = {/Users/glbcm/Zotero/storage/SCRJU3VT/FE6DE9C7-0AEC-4187-9993-F959A98A4FF4.pdf},
+  KEYWORDS = {Shastasaurus,Triassic,Phantomosaurus,\#nosource},
+  PAGES = {1--27},
+  TITLE = {The Paleobiogeography of {{{\emph{Shastasaurus}}}}},
 }
 
 @ARTICLE{Romer1968CGUSC,
@@ -1266,6 +1315,7 @@
 
 @ARTICLE{Wade1990MQM,
   AUTHOR = {Wade, Mary},
+  DATE = {1990-03},
   FILE = {/Users/glbcm/Zotero/storage/J5NNIN6Y/Wade_1990_Memoirs_of_the_Queensland_Museum_A_review_of_the_Australian_Cretaceous_longipinnate_ichthyosaur.pdf},
   JOURNALTITLE = {Memoirs of the Queensland Museum},
   KEYWORDS = {Platypterygius},
@@ -1282,7 +1332,7 @@
   DOI = {10.1671/0272-4634(2005)025[0583:ROPHVH]2.0.CO;2},
   FILE = {/Users/glbcm/Zotero/storage/RLI7UESS/75B5CC10-1E53-446C-BF3B-92F315B13944.pdf},
   JOURNALTITLE = {Journal of Vertebrate Paleontology},
-  KEYWORDS = {\#nosource,Platypterygius},
+  KEYWORDS = {Platypterygius,\#nosource},
   LANGID = {english},
   NUMBER = {3},
   PAGES = {583--587},
@@ -1296,7 +1346,7 @@
   DATE = {2009-06},
   FILE = {/Users/glbcm/Zotero/storage/RW2T5753/AB0861EA-DCA0-45A3-8A08-CFBDA5B9F123.pdf},
   JOURNALTITLE = {Palaeontographica Abteilung A: Paläozoo­logie—Strati­graphie},
-  KEYWORDS = {\#nosource,Platypterygius},
+  KEYWORDS = {Platypterygius,\#nosource},
   NUMBER = {4--6},
   PAGES = {151--192},
   SHORTJOURNAL = {Palaeontogr A Paläozool Strat},
@@ -1322,9 +1372,10 @@
   AUTHOR = {Páramo, M E},
   PUBLISHER = {[object Object]},
   URL = {http://scholar.google.com/scholar?q=related:ltJk9I19J2kJ:scholar.google.com/&hl=en&num=20&as_sdt=0,5},
+  DATE = {1997},
   FILE = {/Users/glbcm/Zotero/storage/8275JCFB/Paramo_1997_Revista_Ingeominas_iPlatypterygius_sachicarum-i_(Reptilia,_Ichthyosauria)_nueva_especie_del.pdf},
   JOURNALTITLE = {Revista Ingeominas},
-  KEYWORDS = {\#nosource,Aptian,Barremian,Colombia,Cretaceous,ichthyosaurs,Platypterygius,taxonomy},
+  KEYWORDS = {Cretaceous,Platypterygius,taxonomy,ichthyosaurs,Barremian,Aptian,Colombia,\#nosource},
   PAGES = {1--12},
   SHORTJOURNAL = {Rev Ingeominas},
   TITLE = {{{{\emph{Platypterygius sachicarum}}}} ({{Reptilia}}, {{Ichthyosauria}}) Nueva Especie Del {{Cretácico}} de {{Colombia}}},
@@ -1333,6 +1384,7 @@
 
 @ARTICLE{Yang2013ASNUP,
   AUTHOR = {Yang, Peng-Fei and Cheng, Ji and Jiang, Dayong and Motani, Ryosuke and Tintori, Andrea and Sun, Yuan-Lin and Sun, Zuo-Yu},
+  DATE = {2013-11},
   FILE = {/Users/glbcm/Zotero/storage/AWP8Z9E3/Yang2013-Acta_Scientiarum_Naturalium_Universitatis_Pekinensis-_1-8.pdf},
   JOURNALTITLE = {Acta Scientiarum Naturalium Universitatis Pekinensis},
   NUMBER = {6},
@@ -1361,9 +1413,10 @@
   AUTHOR = {Maisch, Michael W and Matzke, Andreas T},
   PUBLISHER = {[object Object]},
   URL = {http://scholar.google.com/scholar?q=related:e-bNikAcFNMJ:scholar.google.com/&hl=en&num=20&as_sdt=0,5},
+  DATE = {2003-09},
   FILE = {/Users/glbcm/Zotero/storage/8T93NWEW/726F6634-C266-44C7-B08D-8C1241B26090.pdf},
   JOURNALTITLE = {Neues Jahrbuch für Geologie und Paläontologie, Abhandlungen},
-  KEYWORDS = {\#nosource,ichthyosaurs,Svalbard,Triassic},
+  KEYWORDS = {Triassic,ichthyosaurs,Svalbard,\#nosource},
   NUMBER = {3},
   PAGES = {317--338},
   SHORTJOURNAL = {N Jahrb Geol Paläontol Abh},
@@ -1374,6 +1427,7 @@
 @ARTICLE{Jiang2016SR,
   ABSTRACT = {srep , (2016). doi:10.1038/srep26232},
   AUTHOR = {Jiang, Dayong and Motani, Ryosuke and Huang, Jian-Dong and Tintori, Andrea and Hu, Yuan-Chao and Rieppel, Olivier C and Fraser, Nicholas C and Ji, Cheng and Kelley, Neil P and Fu, Wanlu and Zhang, Rong},
+  DATE = {2016-05},
   DOI = {10.1038/srep26232},
   FILE = {/Users/glbcm/Zotero/storage/AFKV7WS7/Jiang_et_al_2016_A_large_aberrant_stem_ichthyosauriform_indicating_early_rise_and_demise_of_ichthyosauromorphs_in.pdf},
   JOURNALTITLE = {Scientific Reports},
@@ -1388,6 +1442,7 @@
   ABSTRACT = {The fossil record of a major clade often starts after a mass extinction even though evolutionary rates, molecular or morphological, suggest its pre-extinction emergence (e.g. squamates, placentals and teleosts). The discrepancy is larger for older clades, and the presence of a time-scale-dependent methodological bias has been suggested, yet it has been difficult to avoid the bias using Bayesian phylogenetic methods. This paradox raises the question of whether ecological vacancies, such as those after mass extinctions, prompt the radiations. We addressed this problem by using a unique temporal characteristic of the morphological data and a high-resolution stratigraphic record, for the oldest clade of Mesozoic marine reptiles, Ichthyosauromorpha. The evolutionary rate was fastest during the first few million years of ichthyosauromorph evolution and became progressively slower over time, eventually becoming six times slower. Using the later slower rates, estimates of divergence time become excessively older. The fast, initial rate suggests the emergence of ichthyosauromorphs after the end-Permian mass extinction, matching an independent result from high-resolution stratigraphic confidence intervals. These reptiles probably invaded the sea as a new ecosystem was formed after the end-Permian mass extinction. Lack of information on early evolution biased Bayesian clock rates.},
   AUTHOR = {Motani, Ryosuke and Jiang, Dayong and Tintori, Andrea and Ji, Cheng and Huang, Jian-Dong},
   PUBLISHER = {The Royal Society},
+  DATE = {2017-05},
   DOI = {10.1098/rspb.2017.0241},
   FILE = {/Users/glbcm/Zotero/storage/JEQEFJC5/Motani_etal_2017_Proceedings_of_the_Royal_Society_B_Biological_Sciences_Pre-_versus_post-mass_extinction_divergence_of_Mesozoic_marine_reptiles.pdf},
   JOURNALTITLE = {Proceedings of the Royal Society B: Biological Sciences},
@@ -1431,7 +1486,7 @@
   DATE = {1980-10},
   FILE = {/Users/glbcm/Zotero/storage/K9EP54XL/D1859419-38D3-47C8-B066-530DF228F020.pdf},
   JOURNALTITLE = {Palaeontographica Abteilung A: Paläozoologie—Stratigraphie},
-  KEYWORDS = {\#nosource,Shonisaurus,Triassic},
+  KEYWORDS = {Triassic,Shonisaurus,\#nosource},
   NUMBER = {4–6},
   PAGES = {139--200},
   SHORTJOURNAL = {Palaeontogr A Paläozool Strat},
@@ -1497,9 +1552,10 @@
   AUTHOR = {Maisch, Michael W},
   PUBLISHER = {[object Object]},
   URL = {http://scholar.google.com/scholar?q=related:6RqIgiXlHZQJ:scholar.google.com/&hl=en&num=20&as_sdt=0,5},
+  DATE = {1998-05},
   FILE = {/Users/glbcm/Zotero/storage/ZVPIHWME/1608CBA1-CF9A-4DEA-9FCE-925A303FA888.pdf},
   JOURNALTITLE = {Neues Jahrbuch für Geologie und Paläontologie, Abhandlungen},
-  KEYWORDS = {\#nosource,Germany,ichthyosaurs,phylogenetics,Suevoleviathan,taxonomy,Toarcian},
+  KEYWORDS = {Toarcian,Suevoleviathan,phylogenetics,taxonomy,ichthyosaurs,Germany,\#nosource},
   LANGID = {english},
   NUMBER = {1},
   PAGES = {47--78},
@@ -1510,6 +1566,7 @@
 
 @ARTICLE{Fischer2011JVP,
   AUTHOR = {Fischer, Valentin and Masure, Edwige and Arkhangelsky, Maxim S and Godefroit, Pascal},
+  DATE = {2011-09},
   DOI = {10.1080/02724634.2011.595464},
   FILE = {/Users/glbcm/Zotero/storage/PW49JAL5/D2621D28-0573-4FC6-883A-3920801523FD.pdf},
   JOURNALTITLE = {Journal of Vertebrate Paleontology},
@@ -1524,6 +1581,7 @@
 
 @ARTICLE{Martin2012P,
   AUTHOR = {Martin, Jeremy E and Fischer, Valentin and Vincent, Peggy and Suan, Guillaume},
+  DATE = {2012-09},
   DOI = {10.1111/j.1475-4983.2012.01159.x},
   FILE = {/Users/glbcm/Zotero/storage/9NLURK6I/pala_1159_sm_supplemenntary-datas1.xls;/Users/glbcm/Zotero/storage/C2Q8CKPK/Martin_etal_2012_Palaeontology_A_longirostrine_iTemnodontosaurus-i_(Ichthyosauria)_with_comments_on_Early.pdf},
   JOURNALTITLE = {Palaeontology},
@@ -1553,6 +1611,7 @@
   AUTHOR = {McGowan, Christopher},
   LOCATION = {[Toronto] :},
   PUBLISHER = {Royal Ontario Museum,},
+  DATE = {1974-04},
   DOI = {10.5962/bhl.title.52055},
   FILE = {/Users/glbcm/Zotero/storage/KHUPU5EX/A8B0E079-771C-4440-81CC-8E6CFD6D699A.pdf},
   ISBN = {0888541511},
@@ -1579,9 +1638,10 @@
 
 @ARTICLE{Maisch1997SBNBGP,
   AUTHOR = {Maisch, Michael W. and Hungerbühler, Axel},
+  DATE = {1997-09-30},
   FILE = {/Users/glbcm/Zotero/storage/BMSYX2PG/5AF6272B-58D6-4E56-A983-FB680F09FED5.pdf},
   JOURNALTITLE = {Stuttgarter Beiträge zur Naturkunde, Serie B (Geologie und Paläontologie)},
-  KEYWORDS = {\#nosource,Jurassic,Temnodontosaurus},
+  KEYWORDS = {Jurassic,Temnodontosaurus,\#nosource},
   PAGES = {1--11},
   SHORTJOURNAL = {Stuttgart Beitr Natur B Geol Paläontol},
   TITLE = {Revision of {{{\emph{Temnodontosaurus nuertingensis}}}} (v. {{Huene}}, 1931), a Large Ichthyosaur from the {{Lower Pliensbachian}} ({{Lower Jurassic}}) of {{Nürtingen}}, {{South Western Germany}}},
@@ -1595,7 +1655,7 @@
   URL = {http://scholar.google.com/scholar?q=related:zlKeGnI2gWUJ:scholar.google.com/&hl=en&num=20&as_sdt=0,5},
   DATE = {1891},
   FILE = {/Users/glbcm/Zotero/storage/KFQWNDV4/Fraas_1891_Die_Ichthyosaurier_der_suddeutschen_Trias-und_Jura-Ablagerungen.pdf},
-  KEYWORDS = {\#nosource,Eurhinosaurus,Ichthyosaurus,Jurassic,Leptonectes,Mixosaurus,Stenopterygius,Temnodontosaurus,Triassic},
+  KEYWORDS = {Ichthyosaurus,Jurassic,Mixosaurus,Triassic,Eurhinosaurus,Stenopterygius,Temnodontosaurus,Leptonectes,\#nosource},
   TITLE = {Die {{Ichthyosaurier}} Der Süddeutschen {{Trias}}-Und {{Jura}}-{{Ablagerungen}}},
 }
 
@@ -1633,7 +1693,7 @@
   DATE = {2004-07-01},
   FILE = {/Users/glbcm/Zotero/storage/G65C66SQ/F6307C31-2526-466C-AC67-F9067E9F4457.pdf},
   JOURNALTITLE = {Rivista Italiana di Paleontologia e Stratigraphia},
-  KEYWORDS = {\#nosource,Tholodus},
+  KEYWORDS = {Tholodus,\#nosource},
   NUMBER = {2},
   PAGES = {479--492},
   SHORTJOURNAL = {Riv Ital Paleontol Stratigr},
@@ -1654,19 +1714,21 @@
   VOLUME = {3},
 }
 
-@ARTICLE{Efimov1999PZa,
-  AUTHOR = {Efimov, V. M.},
+@ARTICLE{Efimov1999PZd,
+  AUTHOR = {Efimov, V M},
   DATE = {1999},
+  FILE = {/Users/glbcm/Zotero/storage/F6N4GIWW/4E083530-CB9F-42E6-95E6-807353F25543.pdf},
   JOURNALTITLE = {Paleontologicheskii Zhurnal},
   KEYWORDS = {Jurassic,Undorosaurus,\#nosource},
   PAGES = {174--181},
   SHORTJOURNAL = {Paleontol. Zhurnal},
-  TITLE = {A {{New Family}} of {{Ichthyosaurs}}, the {{Undorosauridae Fam}}. {{Nov}}. from the {{Volgian Stage}} of the {{European Part}} of {{Russia}}},
+  TITLE = {A New Family of Ichthyosaurs, the {{Undorosauridae}} Fam. Nov. from the {{Volgian Stage}} of the {{European}} Part of {{Russia}}},
   VOLUME = {1999},
 }
 
 @ARTICLE{Arkhangelsky2014PZIR,
   AUTHOR = {Arkhangelsky, Maxim S and Zverkov, Nikolay G},
+  DATE = {2014-09},
   FILE = {/Users/glbcm/Zotero/storage/U2MGZ5ED/ABB2FA92-D18B-4441-BD84-0117319BE8DD.pdf},
   JOURNALTITLE = {Proceedings of the Zoological Institute RAS},
   KEYWORDS = {\#nosource},
@@ -1692,6 +1754,7 @@
 
 @ARTICLE{Lomax2016JSP,
   AUTHOR = {Lomax, Dean R},
+  DATE = {2016-06},
   DOI = {10.1080/14772019.2016.1183149},
   FILE = {/Users/glbcm/Zotero/storage/74HPU4F9/Lomax_2016_A_new_leptonectid_ichthyosaur_from_the_Lower_Jurassic_(Hettangian)_of_Nottinghamshire,_England,_UK,.pdf},
   JOURNALTITLE = {Journal of Systematic Palaeontology},
@@ -1708,9 +1771,10 @@
   AUTHOR = {Maisch, Michael W and Matzke, Andreas T},
   PUBLISHER = {Neues …},
   URL = {http://scholar.google.com/scholar?q=related:9lGjnRO8Oz0J:scholar.google.com/&hl=en&num=20&as_sdt=0,5},
+  DATE = {1998-02},
   FILE = {/Users/glbcm/Zotero/storage/P4YXX634/FFA9E927-5460-4C6B-9210-C9CB6CED95EA.pdf},
   JOURNALTITLE = {Neues Jahrbuch für Geologie und Paläontologie, Monatshefte},
-  KEYWORDS = {\#nosource,ichthyosaurs,Switzerland,taxonomy,Triassic,Wimanius},
+  KEYWORDS = {Triassic,Wimanius,taxonomy,ichthyosaurs,Switzerland,\#nosource},
   NUMBER = {1},
   PAGES = {26--41},
   SHORTJOURNAL = {N Jahrb Geol Paläontol Monats},
@@ -1734,15 +1798,16 @@
 }
 
 @ARTICLE{Nicholls2001CJES,
-  AUTHOR = {Nicholls, Elizabeth L. and Manabe, Makoto},
+  AUTHOR = {Nicholls, Elizabeth L and Manabe, Makoto},
   DATE = {2001-07},
-  DOI = {10.1139/e00-115},
+  DOI = {10.1139/cjes-38-6-983},
+  FILE = {/Users/glbcm/Zotero/storage/5BWAPUCT/506A8742-AA93-4DE8-AE2C-D61EE92A4927.pdf},
   JOURNALTITLE = {Canadian Journal of Earth Sciences},
-  KEYWORDS = {\#nosource},
+  KEYWORDS = {\#nosource,British Columbia,ichthyosaurs,taxonomy,Triassic},
   NUMBER = {6},
   PAGES = {983--1002},
   SHORTJOURNAL = {Can. J. Earth Sci.},
-  TITLE = {A {{New Genus}} of {{Ichthyosaur}} from the {{Late Triassic Pardonet Formation}} of {{British Columbia}}: {{Bridging}} the {{Triassic}}--{{Jurassic Gap}}},
+  TITLE = {A New Genus of Ichthyosaur from the {{Late Triassic Pardonet Formation}} of {{British Columbia}}: Bridging the {{Triassic Jurassic}} Gap},
   VOLUME = {38},
 }
 
@@ -1788,22 +1853,12 @@
   VOLUME = {98},
 }
 
-@INCOLLECTION{Sander1997Amr,
-  AUTHOR = {Sander, P Martin},
-  LOCATION = {San Diego},
-  PUBLISHER = {Academic Press},
-  BOOKTITLE = {Ancient Marine Reptiles},
-  FILE = {/Users/glbcm/Zotero/storage/SCRJU3VT/FE6DE9C7-0AEC-4187-9993-F959A98A4FF4.pdf},
-  KEYWORDS = {Shastasaurus,Triassic,Phantomosaurus,\#nosource},
-  PAGES = {1--27},
-  TITLE = {The Paleobiogeography of {{{\emph{Shastasaurus}}}}},
-}
-
 @ARTICLE{Maisch1999NJFGPM,
   AUTHOR = {Maisch, Michael W and Matzke, Andreas T},
+  DATE = {1999-06},
   FILE = {/Users/glbcm/Zotero/storage/ZCQG7XA4/0D5CBEC1-D93A-4A9A-8817-D1F642516520.pdf},
   JOURNALTITLE = {Neues Jahrbuch für Geologie und Paläontologie, Monatshefte},
-  KEYWORDS = {Mikadocephalus,Triassic,Wimanius},
+  KEYWORDS = {Triassic,Mikadocephalus,Wimanius},
   NUMBER = {6},
   PAGES = {345--356},
   SHORTJOURNAL = {Neues Jahrb. Für Geol. Paläontol. Monatshefte},
