--- a/supplement-ichthyosaur_macroevolution.tex
+++ b/supplement-ichthyosaur_macroevolution.tex
@@ -22,7 +22,9 @@
 
 \usepackage{geometry}
 \usepackage{graphicx}
-\usepackage{caption}
+\usepackage[figurename = {Supplementary~figure},
+            tablename  = {Supplementary~table},
+            labelsep   = period]{caption}
 \usepackage[export]{adjustbox}
 \usepackage{rotating}
 \usepackage{placeins}
@@ -71,8 +73,7 @@
 \usepackage{jabbrv}
     \DeclareFieldInputHandler{journaltitle}%
         {\def\NewValue{\JournalTitle{#1}}}
-\addbibresource{zotero.bib}
-% \addbibresource{supplement-ichthyosaur_macroevolution_biber.bib}
+\addbibresource{supplement-ichthyosaur_macroevolution_biber.bib}
 \AtEveryBibitem{\clearfield{note}}
 
 \usepackage{hyperref}
@@ -80,7 +81,7 @@
     \newcommand\pcref[1]{(\cref{#1})}
 
 
-\title{Supplemental material for `Early high rates and disparity in the
+\title{Supplementary material for `Early high rates and disparity in the
 evolution of ichthyosaurs'} 
 \author{Benjamin C.\ Moon \and Thomas L.\ Stubbs}
 \date{\today~\version}
@@ -91,165 +92,8 @@ evolution of ichthyosaurs'}
 
 \tableofcontents
 
-\section{Supplemental methods}\label{supplemental-methods}
 
-\paragraph{Comparison of time-scaling methods}\label{comparison-of-time-scaling-methods}
-
-To assess the effects of variation in the timing of ichthyosaur evolution on
-discrete evolutionary rates, we further used the minimum branch length (MBL)
-tree-scaling method \autocite{Bapst2012MEE, Laurin2004SB}. This scales the
-tree according to occurrence dates, but ensures that each branch length is
-greater than a given value, rescaling ancestral branches as necessary to ensure
-this minimum length. Here, we used a MBL of \SI{1}{\mega\annum} as a reasonable
-minimum between speciation events and to avoid forcing excessive branch lengths
-where speciation may occur rapidly. We used the same sample of 120 phylogenetic
-trees as the main analysis from the Bayesian phylogenetic posterior distribution
-of \textcite{Moon2018JSP}. Trees were time-scaled in R \autocite{RCoreTeam2019} using the
-function \texttt{timePaleoPhy} in the package paleotree \autocite{Bapst2012MEE}
-with point ages sampled from a uniform distribution between their first and last
-occurrences. Each tree was resampled 10 times to account for the occurrence
-ranges for each taxon (100 tree topologies × 10 samples = 1000 time-scaled trees
-total). These MBL time-scaled trees were then used for a further set of discrete
-character evolutionary rates analyses using function
-\texttt{DiscreteCharacterRate} of R package Claddis \autocite{Lloyd2016BJLS}. The
-results of this were used to produce `spaghetti' plots for epoch-length bins and
-equal-length bins using modified scripts from \textcite{Close2015CB}. Code for
-all these analyses is included in Supplemental~\ref{disparity-discrete-code}.
-
-\paragraph{Additional disparity metrics}
-
-Our main results present ichthyosauriform disparity using per-bin pairwise
-differences between taxa from a distance matrix calculated using maximum
-observed rescaled distances \autocite{Lloyd2016BJLS}. Additionally, we compared
-different distance conversion and disparity metrics.
-
-Claddis provides four distance metrics for discrete character data
-\autocite{Lloyd2016BJLS}: raw Euclidean distances (RAW), generalized Euclidean
-distances (GED) \autocite{Wills1994P}, Gower's coefficient (GOW)
-\autocite{Gower1971B}, and maximum observable rescaled distances (MAX)
-\autocite{Lloyd2016BJLS}. All four distance metrics were run through the same
-disparity work flow. Recent studies have shown that GED as implemented in
-Claddis is susceptible to the completeness of the original data matrix, which
-may have a strong effect on the resulting disparity
-\autocite{FlannerySutherland2019PRSBBS, Lehmann2019P}; therefore we prefer MAX\@.
-
-Similarly, several different disparity metrics have been developed, each with
-varying properties. Our main results present mean and weighted mean pairwise
-distances on MAX as this comes directly from the original data matrix, but we
-also calculated the pairwise distances for RAW, GED, and GOW distances matrices
-\pcref{fig:pairwise-disparity}. We ordinated the data using Principal
-Coordinates Analysis (PCA), both with and without applying a correction to
-negative eigenvalues \autocite{Caillez1983P} and compared the correlation of the
-PCA data with the original distance matrix. 
-
-From the PCA data we used all the resultant axes to calculate per-bin sum of
-variances, sum of ranges, and centroid distances. These metrics have been used
-extensively in previous analyses \autocite{Wills1998BJLS, Thorne2011PNAS,
-FlannerySutherland2019PRSBBS}, so we considered it pertinent to compare them.
-Binning, bootstrap resampling with 500 replicates, and complete rarefaction
-were completed using the functions \texttt{custom.subsets} and
-\texttt{boot.matrix}, and disparity calculations used the function
-\texttt{dispRity}, all from package dispRity \autocite{Guillerme2018MEE} in R.
-Code for this is included in Supplemental~\ref{disparity-discrete-code}.
-
-
-\section{Supplemental results}\label{sec:supplemental-results}
-
-\paragraph{Pairwise disparity}\label{par:pairwise-disparity}
-
-Broadly speaking, trends in disparity across all four distance matrices are
-similar: disparity peaks in the Late Triassic then declines through the Jurassic
-and Cretaceous \pcref{fig:pairwise-disparity}. The bins that preserve the most
-completely coded taxa (\cref{fig:pairwise-disparity} CHAR\@: Early Jurassic;
-\SIrange{201.3}{171.3}{\mega\annum}) also show relatively increased disparity in
-RAW and GED distance matrices compared to GOW and MAX\@. Indeed, the earliest
-Jurassic bins are the most disparate for the RAW distance metric with both
-binning schemes, and for GED the earliest Jurassic bins have relatively higher
-disparity than GOW and MAX distance matrices. This is most likely a further
-effect of incompleteness degrading the disparity signal by averaging the
-difference between taxa \autocite{FlannerySutherland2019PRSBBS, Lehmann2019P},
-therefore we prefer the results given by GOW and MAX distance matrices.
-Rarefying the data shows that maximum disparity is reach quickly with minimal
-taxa included, and supports using the full taxon sample for each bin
-\pcref{fig:pd-rarefaction-curves}.
-
-\paragraph{Correlation of ordinated data}\label{par:pco-correlation}
-
-Negative eigenvalue correction notably decreased the variance described by the
-first few principal coordinate axes \cref{fig:ordination-correlation}. The
-highest correlations between the original and ordinated data were found when
-including all ordinated axes \pcref{fig:ordination-correlation}. Without
-negative eigenvalue correction RAW and GED had the highest correlation, whereas
-GOW and MAX were reduced to \textasciitilde{}0.8. With negative eigenvalue
-correction the pattern of correlations with increasing number of axes was more
-complex: RAW gradually increased whereas GED strongly decreased, but both
-rapidly increased to 1.0 with the last axes; GOW and MAX correlations both
-immediately decreased, increased to a peak at \textasciitilde{}axis 60, then
-rapidly increased again when including the last axes.
-
-\paragraph{Disparity of ordinated data}\label{par:ordinated-disparity}
-
-\textcite{Wills1998BJLS} asserted that variance based disparity metrics are more
-suited to measuring overall dissimilarity whereas range-based metrics are
-appropriate for disparity as they are affected by occurrence and thus show the
-diversification of morphology. In this context, our results support our
-conclusions that ichthyosaurs represent an early burst of evolution: both of
-these metrics show initial high disparity from all distance matrices
-(\cref{fig:ordinated-disparity}). Sum of variances also has a marked increase
-between the Early to Middle Triassic and a substantial decline in disparity
-between the Late Triassic–Early Jurassic in the combination of GOW/MAX distance
-matrix and uncorrected PCO\@; otherwise all curves follow similar trends. Sum of
-variances proves more resilient to sample size in rarefaction than either sum of
-ranges or centroid distance (\cref{fig:rarefaction-curves}).
-
-All sum of ranges curves display the same trends in disparity, differing only in
-the magnitude. Similarly, we find early high disparity and an increase between
-the Early–Middle Triassic (\cref{fig:ordinated-disparity}). Disparity decreases
-substantially through the later Triassic, but broadly recovers in the Early
-Jurassic before more log-term decline through to the extinction of the
-ichthyosaurs. Particularly low disparity (e.g. Middle Jurassic;
-\SIrange{171.3} {161.3}{\mega\annum}) are those bins represented by few taxa and
-relative incompleteness.
-
-In the case of centroid distance, although this has been shown to be especially
-susceptible to issues of `centroid slippage'
-\autocite{FlannerySutherland2019PRSBBS, Lehmann2019P}, our results show the same
-trends as for sum of variances: high early disparity that is sustained through
-to the Late Jurassic/Early Cretaceous before decline, with dips that are most
-likely related to incompleteness of specimens (\cref{fig:ordinated-disparity}).
-
-\paragraph{Morphospace occupation of ordinated data}\label{par:ordinated-morphospace}
-
-Morphospace occupation between Triassic and post-Triassic Ichthyosauriformes is
-separated in almost all cases (\cref{fig:morphospace-plots}; except RAW and GED
-distances). Late Triassic taxa are also separated from earlier Triassic taxa in
-GOW and MAX distance without negative eigenvalue correction, and are
-consistently positioned more closely towards the Early Jurassic taxa. The
-variation in Jurassic and Cretaceous taxa is markedly increased in RAW and GED
-distances relative to GOW and MAX\@. Differences within Jurassic and Cretaceous
-taxa are more represented in PCo axis 2 than axis 3 in the RAW and GED
-morphospace plots, but in a combination of PCO axes 1 and 3 in GOW and MAX\@. All
-RAW and GED morphospace plots show more points towards the origins of the plots
-than GOW and MAX, a results of `centroid slippage'
-\autocite{FlannerySutherland2019PRSBBS, Lehmann2019P}; in particular these represent
-the least complete taxa.
-
-\paragraph{Time-scaling and rates}\label{par:mbl-scaling-rates}
-
-Using the MBL time-scaling method created trees with a root age of
-\SIrange{253.8}{268.5}{\mega\annum}; older than the corresponding root ages from
-the Hedman scaling method. Rates of discrete character evolution are relatively
-lower for during the Early–Middle Triassic, but these earlier bins nonetheless
-show significantly higher rates of evolution that subsequent bins
-\pcref{fig:mbl-discrete-rates}. Trends across the whole of ichthyosaur evolution
-remain similar, although there are increased peaks in the later Early Jurassic
-and the Late Cretaceous bins. Significantly low rates of discrete character
-evolution are reached in the Early Jurassic (epoch bins) or Late Triassic
-(\SI{10}{\mega\annum} bins).
-
-
-
-\section{Supplemental figures}\label{sec:supplemental-figures}
+\section{Supplementary figures}\label{sec:supplemental-figures}
 
 \listoffigures
 
@@ -382,7 +226,7 @@ evolution are reached in the Early Jurassic (epoch bins) or Late Triassic
                 are shown to 3~d.p.\label{tbl:ingroup-lengths}}}\\
 	        \toprule
 	        \emph{Taxon} & {Skull length (\si{\milli\metre})} & {log\textsubscript{10}~(Skull length (\si{\milli\metre}))} & {References}\\\midrule\endfirsthead
-	        \caption*{Table~\thetable{} continued}\\
+	        \caption*{Supplementary table~\thetable{} continued}\\
 	        \toprule\emph{Taxon} & {Skull length (\si{\milli\metre})} & {log\textsubscript{10}~(Skull length (\si{\milli\metre}))} & {References}\\\midrule\endhead
 	        \bottomrule\endfoot
 	        \bottomrule\endlastfoot}]%
@@ -392,10 +236,10 @@ evolution are reached in the Early Jurassic (epoch bins) or Late Triassic
 }
 
 
-\section{Supplemental code}\label{supplemental-code}
+\section{Supplementary code}\label{supplemental-code}
 
-\begin{enumerate}[label = \textbf{Code \textallsc{S\arabic*}}, align = left,
-    ref = {Code \textallsc{S\arabic*}}]
+\begin{enumerate}[label = \textbf{Code \arabic*}, align = left,
+    ref = {Code \arabic*}]
     \item \textbf{R code implementing the disparity, principal coordinates,
         diversity, and discrete character rates analyses.} This set of five
         scripts contains the code used to run the main discrete character
@@ -411,6 +255,163 @@ evolution are reached in the Early Jurassic (epoch bins) or Late Triassic
         runs. Also includes code to create the traitgram of
         Fig.~4.\label{bayestraits-code}
 \end{enumerate}
+
+
+\section{Supplementary methods}\label{supplemental-methods}
+
+\paragraph{Comparison of time-scaling methods}\label{comparison-of-time-scaling-methods}
+
+To assess the effects of variation in the timing of ichthyosaur evolution on
+discrete evolutionary rates, we further used the minimum branch length (MBL)
+tree-scaling method \autocite{Bapst2012MEE, Laurin2004SB}. This scales the
+tree according to occurrence dates, but ensures that each branch length is
+greater than a given value, rescaling ancestral branches as necessary to ensure
+this minimum length. Here, we used a MBL of \SI{1}{\mega\annum} as a reasonable
+minimum between speciation events and to avoid forcing excessive branch lengths
+where speciation may occur rapidly. We used the same sample of 120 phylogenetic
+trees as the main analysis from the Bayesian phylogenetic posterior distribution
+of \textcite{Moon2018JSP}. Trees were time-scaled in R \autocite{RCoreTeam2019} using the
+function \texttt{timePaleoPhy} in the package paleotree \autocite{Bapst2012MEE}
+with point ages sampled from a uniform distribution between their first and last
+occurrences. Each tree was resampled 10 times to account for the occurrence
+ranges for each taxon (100 tree topologies × 10 samples = 1000 time-scaled trees
+total). These MBL time-scaled trees were then used for a further set of discrete
+character evolutionary rates analyses using function
+\texttt{DiscreteCharacterRate} of R package Claddis \autocite{Lloyd2016BJLS}. The
+results of this were used to produce `spaghetti' plots for epoch-length bins and
+equal-length bins using modified scripts from \textcite{Close2015CB}. Code for
+all these analyses is included in Supplementary~\cref{disparity-discrete-code}.
+
+\paragraph{Additional disparity metrics}
+
+Our main results present ichthyosauriform disparity using per-bin pairwise
+differences between taxa from a distance matrix calculated using maximum
+observed rescaled distances \autocite{Lloyd2016BJLS}. Additionally, we compared
+different distance conversion and disparity metrics.
+
+\indent Claddis provides four distance metrics for discrete character data
+\autocite{Lloyd2016BJLS}: raw Euclidean distances (RAW), generalized Euclidean
+distances (GED) \autocite{Wills1994P}, Gower's coefficient (GOW)
+\autocite{Gower1971B}, and maximum observable rescaled distances (MAX)
+\autocite{Lloyd2016BJLS}. All four distance metrics were run through the same
+disparity work flow. Recent studies have shown that GED as implemented in
+Claddis is susceptible to the completeness of the original data matrix, which
+may have a strong effect on the resulting disparity
+\autocite{FlannerySutherland2019PRSBBS, Lehmann2019P}; therefore we prefer MAX\@.
+
+Similarly, several different disparity metrics have been developed, each with
+varying properties. Our main results present mean and weighted mean pairwise
+distances on MAX as this comes directly from the original data matrix, but we
+also calculated the pairwise distances for RAW, GED, and GOW distances matrices
+\pcref{fig:pairwise-disparity}. We ordinated the data using Principal
+Coordinates Analysis (PCA), both with and without applying a correction to
+negative eigenvalues \autocite{Caillez1983P} and compared the correlation of the
+PCA data with the original distance matrix. 
+
+From the PCA data we used all the resultant axes to calculate per-bin sum of
+variances, sum of ranges, and centroid distances. These metrics have been used
+extensively in previous analyses \autocite{Wills1998BJLS, Thorne2011PNAS,
+FlannerySutherland2019PRSBBS}, so we considered it pertinent to compare them.
+Binning, bootstrap resampling with 500 replicates, and complete rarefaction
+were completed using the functions \texttt{custom.subsets} and
+\texttt{boot.matrix}, and disparity calculations used the function
+\texttt{dispRity}, all from package dispRity \autocite{Guillerme2018MEE} in R.
+Code for this is included in Supplementary~\cref{disparity-discrete-code}.
+
+
+\section{Supplementary results}\label{sec:supplemental-results}
+
+\paragraph{Pairwise disparity}\label{par:pairwise-disparity}
+
+Broadly speaking, trends in disparity across all four distance matrices are
+similar: disparity peaks in the Late Triassic then declines through the Jurassic
+and Cretaceous \pcref{fig:pairwise-disparity}. The bins that preserve the most
+completely coded taxa (\cref{fig:pairwise-disparity} CHAR\@: Early Jurassic;
+\SIrange{201.3}{171.3}{\mega\annum}) also show relatively increased disparity in
+RAW and GED distance matrices compared to GOW and MAX\@. Indeed, the earliest
+Jurassic bins are the most disparate for the RAW distance metric with both
+binning schemes, and for GED the earliest Jurassic bins have relatively higher
+disparity than GOW and MAX distance matrices. This is most likely a further
+effect of incompleteness degrading the disparity signal by averaging the
+difference between taxa \autocite{FlannerySutherland2019PRSBBS, Lehmann2019P},
+therefore we prefer the results given by GOW and MAX distance matrices.
+Rarefying the data shows that maximum disparity is reach quickly with minimal
+taxa included, and supports using the full taxon sample for each bin
+\pcref{fig:pd-rarefaction-curves}.
+
+\paragraph{Correlation of ordinated data}\label{par:pco-correlation}
+
+Negative eigenvalue correction notably decreased the variance described by the
+first few principal coordinate axes \cref{fig:ordination-correlation}. The
+highest correlations between the original and ordinated data were found when
+including all ordinated axes \pcref{fig:ordination-correlation}. Without
+negative eigenvalue correction RAW and GED had the highest correlation, whereas
+GOW and MAX were reduced to \textasciitilde{}0.8. With negative eigenvalue
+correction the pattern of correlations with increasing number of axes was more
+complex: RAW gradually increased whereas GED strongly decreased, but both
+rapidly increased to 1.0 with the last axes; GOW and MAX correlations both
+immediately decreased, increased to a peak at \textasciitilde{}axis 60, then
+rapidly increased again when including the last axes.
+
+\paragraph{Disparity of ordinated data}\label{par:ordinated-disparity}
+
+\textcite{Wills1998BJLS} asserted that variance based disparity metrics are more
+suited to measuring overall dissimilarity whereas range-based metrics are
+appropriate for disparity as they are affected by occurrence and thus show the
+diversification of morphology. In this context, our results support our
+conclusions that ichthyosaurs represent an early burst of evolution: both of
+these metrics show initial high disparity from all distance matrices
+(\cref{fig:ordinated-disparity}). Sum of variances also has a marked increase
+between the Early to Middle Triassic and a substantial decline in disparity
+between the Late Triassic–Early Jurassic in the combination of GOW/MAX distance
+matrix and uncorrected PCO\@; otherwise all curves follow similar trends. Sum of
+variances proves more resilient to sample size in rarefaction than either sum of
+ranges or centroid distance (\cref{fig:rarefaction-curves}).
+
+All sum of ranges curves display the same trends in disparity, differing only in
+the magnitude. Similarly, we find early high disparity and an increase between
+the Early–Middle Triassic (\cref{fig:ordinated-disparity}). Disparity decreases
+substantially through the later Triassic, but broadly recovers in the Early
+Jurassic before more log-term decline through to the extinction of the
+ichthyosaurs. Particularly low disparity (e.g. Middle Jurassic;
+\SIrange{171.3} {161.3}{\mega\annum}) are those bins represented by few taxa and
+relative incompleteness.
+
+In the case of centroid distance, although this has been shown to be especially
+susceptible to issues of `centroid slippage'
+\autocite{FlannerySutherland2019PRSBBS, Lehmann2019P}, our results show the same
+trends as for sum of variances: high early disparity that is sustained through
+to the Late Jurassic/Early Cretaceous before decline, with dips that are most
+likely related to incompleteness of specimens (\cref{fig:ordinated-disparity}).
+
+\paragraph{Morphospace occupation of ordinated data}\label{par:ordinated-morphospace}
+
+Morphospace occupation between Triassic and post-Triassic Ichthyosauriformes is
+separated in almost all cases (\cref{fig:morphospace-plots}; except RAW and GED
+distances). Late Triassic taxa are also separated from earlier Triassic taxa in
+GOW and MAX distance without negative eigenvalue correction, and are
+consistently positioned more closely towards the Early Jurassic taxa. The
+variation in Jurassic and Cretaceous taxa is markedly increased in RAW and GED
+distances relative to GOW and MAX\@. Differences within Jurassic and Cretaceous
+taxa are more represented in PCo axis 2 than axis 3 in the RAW and GED
+morphospace plots, but in a combination of PCO axes 1 and 3 in GOW and MAX\@. All
+RAW and GED morphospace plots show more points towards the origins of the plots
+than GOW and MAX, a results of `centroid slippage'
+\autocite{FlannerySutherland2019PRSBBS, Lehmann2019P}; in particular these represent
+the least complete taxa.
+
+\paragraph{Time-scaling and rates}\label{par:mbl-scaling-rates}
+
+Using the MBL time-scaling method created trees with a root age of
+\SIrange{253.8}{268.5}{\mega\annum}; older than the corresponding root ages from
+the Hedman scaling method. Rates of discrete character evolution are relatively
+lower for during the Early–Middle Triassic, but these earlier bins nonetheless
+show significantly higher rates of evolution that subsequent bins
+\pcref{fig:mbl-discrete-rates}. Trends across the whole of ichthyosaur evolution
+remain similar, although there are increased peaks in the later Early Jurassic
+and the Late Cretaceous bins. Significantly low rates of discrete character
+evolution are reached in the Early Jurassic (epoch bins) or Late Triassic
+(\SI{10}{\mega\annum} bins).
 
 \printbibliography
 
